2011-12-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-match-list.c (nact_match_list_on_selection_changed):
	Fix typo in the comment.

	* src/nact/nact-export-format.c (draw_in_vbox): Increment spacing.

2011-12-13 Pierre Wieser <pwieser@trychlos.org>

	* docs/reference/Makefile.am: Fix (one more time) the build.

	* docs/reference/nautilus-actions-sections.txt: Add new functions.

	Have a distinct interface definition for import assistant.

	* src/nact/nact-assistant-import.ui: New file.

	* po/POTFILES.in:
	* src/nact/Makefile.am:
	* src/nact/nact-assistant-import.c:
	* src/nact/nautilus-actions-config-tool.ui: Updated accordingly.

	* src/nact/nautilus-actions-config-tool.ui:
	* src/nact/nact-assistant-export.ui: Add a padding to GtkFileChoosers.

	* src/nact/nautilus-actions-config-tool.ui: Let a page be scrolled.

	* src/nact/nact-assistant-export.ui: Remove useless placeholder.

2011-12-12 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-preferences.ui:
	Fix vertical expand in runtime execution tab and auto-save frame.

	* src/nact/nact-assistant-export.ui:
	* src/nact/nautilus-actions-config-tool.ui:
	* src/nact/nact-export-format.c (draw_in_vbox): Make assistant labels wrappable.

	* src/io-desktop/nadp-formats.c:
	* src/io-xml/naxml-formats.c: Review the description of the export formats.

	* configure.ac:
	* src/core/na-gtk-utils.c:
	* src/core/na-importer-ask.ui:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-capability.ui:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-add-scheme.ui:
	* src/nact/nact-assistant-export.ui:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-icon-chooser.ui:
	* src/nact/nact-main-tab.c:
	* src/nact/nact-menubar.c:
	* src/nact/nact-preferences.ui:
	* src/nact/nact-schemes-list.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/nact/nautilus-actions-config-tool.ui: Now requires Gtk 2.20.

	* tools/release-tarball.sh: Automatically installs manuals on the website